<resources>
    <string name="app_name">记账本</string>

    <!--主界面-->

    <string name="title_main">主页</string>
    <string name="month_out">本月支出</string>
    <string name="month_in">本月收入</string>
    <string name="month_left">本月结余</string>
    <string name="least_out">最近支出</string>
    <string name="today_out">今日支出</string>
    <string name="week_out">本周支出</string>
    <string name="initial">--</string>

    <!--设置-->
    <string name="setting">设置</string>
    <string name="out_account">导出账本</string>
    <string name="in_account">导入账本</string>
    <string name="about_me">关于我们</string>
    <string name="import_excel">导入设置</string>
    <string name="base_dir">内部存储空间 ></string>
    <string name="no_file">没有文件</string>

    <!--关于我们-->
    <string name="about_me_client">记账本Android版</string>
    <string name="about_me_version">版本号:</string>
    <string name="about_me_update">检查新版本</string>


    <!--明细-->
    <string name="detail">明细</string>
    <string name="detail_month_in">收入</string>
    <string name="detail_month_out">支出</string>
    <string name="detail_month_left">结余</string>
    <string name="detail_no_data">无账单记录</string>


    <!--添加账单-->
    <string name="out">支出</string>
    <string name="in">收入</string>

    <!--新增Tag-->
    <string name="add_tag">新增类别</string>
    <string name="hint">请输入类别名称</string>
    <string name="no_icon">无图片</string>

    <!--编辑Tag-->
    <string name="edit_tag">编辑</string>
    <string name="my_tag">我的选项</string>
    <string name="recommend_tag">推荐选项</string>
    <string name="no_tag">无选项</string>
    <string name="no_recom">暂无推荐</string>


    <string name="calculator_result">0</string>
    <string name="calculator_one">1</string>
    <string name="calculator_two">2</string>
    <string name="calculator_three">3</string>
    <string name="calculator_four">4</string>
    <string name="calculator_five">5</string>
    <string name="calculator_six">6</string>
    <string name="calculator_seven">7</string>
    <string name="calculator_eight">8</string>
    <string name="calculator_nine">9</string>
    <string name="calculator_zero">0</string>
    <string name="calculator_ok">OK</string>
    <string name="calculator_add">+</string>
    <string name="calculator_sub">-</string>
    <string name="calculator_point">.</string>


    <!--支出Tag-->
    <string-array name="out_tag_text">
        <item>餐饮</item>
        <item>交通</item>
        <item>水果</item>
        <item>零食</item>
        <item>买菜</item>
        <item>健身</item>
        <item>美容</item>
        <item>服饰</item>
        <item>话费</item>
        <item>学习</item>
        <item>宠物</item>
        <item>房租</item>
        <item>医疗</item>
        <item>数码</item>
        <item>化妆品</item>
        <item>电影</item>
        <item>网购</item>
        <item>红包</item>
        <item>其他</item>
        <item>添加</item>
    </string-array>


    <!--收入Tag-->
    <string-array name="in_tag_text">
        <item>工资</item>
        <item>生活费</item>
        <item>红包</item>
        <item>兼职</item>
        <item>奖金</item>
        <item>现金</item>
        <item>报销</item>
        <item>退款</item>
        <item>礼金</item>
        <item>福利</item>
        <item>租金</item>
        <item>房租</item>
        <item>利息</item>
        <item>分红</item>
        <item>社保金</item>
        <item>公积金</item>
        <item>借入款</item>
        <item>中奖</item>
        <item>其他</item>
        <item>添加</item>
    </string-array>


    <!--支出推荐Tag-->
    <string-array name="out_recom_tag_text">
        <item>机票</item>
        <item>酒店</item>
        <item>邮费</item>
        <item>养宠</item>
        <item>装修</item>
        <item>KTV</item>
        <item>结婚</item>
        <item>清洁</item>
        <item>保姆</item>
        <item>维修</item>
        <item>汽车</item>
        <item>电器</item>
        <item>家居</item>
        <item>还钱</item>
        <item>生意</item>
        <item>教育</item>
        <item>水电费</item>
        <item>礼金</item>
        <item>奶粉</item>
        <item>尿布</item>
    </string-array>


    <!--收入推荐Tag-->
    <string-array name="in_recom_tag_text">
        <item>机票</item>
        <item>酒店</item>
        <item>邮费</item>
        <item>养宠</item>
        <item>装修</item>
        <item>KTV</item>
        <item>结婚</item>
        <item>清洁</item>
        <item>保姆</item>
        <item>维修</item>
        <item>汽车</item>
        <item>电器</item>
        <item>家具</item>
        <item>还钱</item>
        <item>生意</item>
        <item>教育</item>
        <item>水电费</item>
        <item>礼金</item>
        <item>奶粉</item>
        <item>尿布</item>
    </string-array>


    <!--支出Tag的icon-->
    <integer-array name="out_tag_icon">
        <item>@drawable/icon_diet</item>
        <item>@drawable/icon_traffic</item>
        <item>@drawable/icon_fruit</item>
        <item>@drawable/icon_snack</item>
        <item>@drawable/icon_vegetable</item>
        <item>@drawable/icon_bodybuilding</item>
        <item>@drawable/icon_cosmetology</item>
        <item>@drawable/icon_clothes</item>
        <item>@drawable/icon_bill</item>
        <item>@drawable/icon_study</item>
        <item>@drawable/icon_pet</item>
        <item>@drawable/icon_houserent</item>
        <item>@drawable/icon_treat</item>
        <item>@drawable/icon_digital</item>
        <item>@drawable/icon_cosmetics</item>
        <item>@drawable/icon_movie</item>
        <item>@drawable/icon_onlineshopping</item>
        <item>@drawable/icon_luckymoney</item>
        <item>@drawable/icon_other</item>
        <item>@drawable/icon_add</item>
    </integer-array>


    <!--收入Tag的icon-->
    <integer-array name="in_tag_icon">
        <item>@drawable/icon_salary</item>
        <item>@drawable/icon_livingexpenses</item>
        <item>@drawable/icon_luckymoney</item>
        <item>@drawable/icon_parttime</item>
        <item>@drawable/icon_bonus</item>
        <item>@drawable/icon_cash</item>
        <item>@drawable/icon_reimbursement</item>
        <item>@drawable/icon_refund</item>
        <item>@drawable/icon_cashgift</item>
        <item>@drawable/icon_welfare</item>
        <item>@drawable/icon_rent</item>
        <item>@drawable/icon_houserent</item>
        <item>@drawable/icon_interest</item>
        <item>@drawable/icon_share_bonus</item>
        <item>@drawable/icon_social_security</item>
        <item>@drawable/icon_accumulation_fund</item>
        <item>@drawable/icon_loan</item>
        <item>@drawable/icon_winning</item>
        <item>@drawable/icon_other</item>
        <item>@drawable/icon_add</item>
    </integer-array>

    <!--支出推荐Tag的icon-->
    <integer-array name="out_recom_tag_icon">
        <item>@drawable/icon_plane</item>
        <item>@drawable/icon_hotel</item>
        <item>@drawable/icon_mail</item>
        <item>@drawable/icon_pet</item>
        <item>@drawable/icon_renovation</item>
        <item>@drawable/icon_ktv</item>
        <item>@drawable/icon_marry</item>
        <item>@drawable/icon_clean</item>
        <item>@drawable/icon_nanny</item>
        <item>@drawable/icon_repair</item>
        <item>@drawable/icon_car</item>
        <item>@drawable/icon_electrical</item>
        <item>@drawable/icon_furniture</item>
        <item>@drawable/icon_repay</item>
        <item>@drawable/icon_business</item>
        <item>@drawable/icon_education</item>
        <item>@drawable/icon_water_electricity</item>
        <item>@drawable/icon_cashgift</item>
        <item>@drawable/icon_milk</item>
        <item>@drawable/icon_diaper</item>
    </integer-array>

</resources>
