<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_importExcel_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/title_bar"></LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_bar">

        <ImageView
            android:id="@+id/img_importExcel_back"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/import_excel"
            android:textColor="@color/white"
            android:textSize="@dimen/item_text_big" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dir_bar_height"
        android:background="@color/background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_importExcel_baseDir"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/dir_margin_left"
            android:paddingRight="5dp"
            android:text="@string/base_dir"
            android:textColor="@color/item_text"
            android:textSize="@dimen/item_text_small" />

        <HorizontalScrollView
            android:id="@+id/hsv_importExcel_dir"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/ll_importExcel_dir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"></LinearLayout>

        </HorizontalScrollView>
    </LinearLayout>


    <ListView
        android:id="@+id/lv_importExcel_file"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

    <LinearLayout
        android:id="@+id/ll_importExcel_emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/icon_width_super"
            android:layout_height="@dimen/icon_height_super"
            android:src="@drawable/icon_empty_dir" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_file"
            android:textColor="@color/item_text"
            android:textSize="@dimen/item_text_big" />
    </LinearLayout>

</LinearLayout>
