<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/white">

    </View>

    <LinearLayout
        android:id="@+id/ll_item_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_detail_one_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/detail_item_margin_bottom"
        android:paddingTop="@dimen/detail_item_margin_top">

        <TextView
            android:id="@+id/tv_detail_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/item_text_big" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_month_in"
                android:textColor="@color/black"
                android:textSize="@dimen/item_text_mid" />

            <TextView
                android:id="@+id/tv_detain_month_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/item_text"
                android:textSize="@dimen/item_text_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_month_out"
                android:textColor="@color/black"
                android:textSize="@dimen/item_text_mid" />

            <TextView
                android:id="@+id/tv_detail_month_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/item_text"
                android:textSize="@dimen/item_text_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_month_left"
                android:textColor="@color/black"
                android:textSize="@dimen/item_text_mid" />

            <TextView
                android:id="@+id/tv_detail_month_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/item_text"
                android:textSize="@dimen/item_text_small" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
